more overflow title fixes for board title

--- a/src/components/BoardItem/boardItem.css
+++ b/src/components/BoardItem/boardItem.css
@@ -17,6 +17,9 @@
   margin-left: 5px;
   font-weight: bold;
   color: #ffffffab;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .board-item-info-container {
