--- a/src/components/board-nav-bar/boardnavbar.css
+++ b/src/components/board-nav-bar/boardnavbar.css
@@ -56,4 +56,7 @@
 .boardnavbar-boardtitle {
 	margin-left: 10px;
 	font-weight: 500;
+	max-width: 125px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
